sumo/tests/traci/VariableRetrieval/Edge/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 0xaa 0xff dummy
simstep 6 1
